--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
   <form class="search-form">
     <input type="text" class="search" placeholder="@TwitterHandle">
     <ul class="suggestions">
-      <li>Filter for a city</li>
-      <li>or a state</li>
+      <!--<li>Filter for a city</li>
+      <li>or a state</li>-->
     </ul>
   </form>
 <script>
