--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 
+    <img src="jobchirp.png" class="image-tag">
+    <br />
+
   <form class="search-form">
     <input type="text" class="search" placeholder="@TwitterHandle">
     <ul class="suggestions">
