--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Type Ahead 👀</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Job Chirp</title>
+  <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
-    <img src="jobchirp.png" class="image-tag">
+    <img src="../jobchirp.png" class="image-tag">
     <br />
 
   <form class="search-form">
     <input type="text" class="search" placeholder="@TwitterHandle">
     <ul class="suggestions">
+      <input type="submit" value="Find Profile" />
       <!--<li>Filter for a city</li>
       <li>or a state</li>-->
     </ul>
